# ci_shared

./: .gitignore  .gitleaks.toml  .safety-project.ini  2  AGENTS.md  CI_RULES.md  CLAUDE.md  README.md  SECURITY.md  ci_shared.config.json  ci_shared.mk  pyproject.toml  shared-tool-config.toml  xci.config.json.example
ci_tools/: __init__.py  ci.py  test_constants.py
ci_tools/ci_runtime/: __init__.py  bandit_wrapper.py  claude_cli.py  codex.py  config.py  coverage.py  environment.py  failures.py  heuristics.py  messaging.py  models.py  patch_cycle.py  patching.py  process.py  workflow.py
ci_tools/scripts/: ast_utils.py  ci.sh  cli_detection.py  complexity_guard.py  config_loader.py  coverage_guard.py  data_guard.py  delegation_guard.py  dependency_guard.py  documentation_guard.py  duplicate_detection.py  fragmentation_guard.py  function_size_guard.py  generate_commit_message.py  guard_common.py  import_analysis.py  import_checking.py  inheritance_guard.py  method_count_guard.py  module_guard.py  policy_checks.py  policy_collectors_ast.py  policy_collectors_text.py  policy_context.py  policy_guard.py  policy_rules.py  policy_visitors.py  propagate_ci_shared.py  structure_guard.py  tool_config_guard.py  unused_module_guard.py  xci.sh
ci_tools/utils/: consumers.py
config/: data_guard_allowlist.json
docs/: README.md  automation.md  development.md  getting-started.md  guard-suite.md  index.md
scripts/: README.md  ci.sh  claude_pty_wrapper.py  list_consumers.py  requirements.txt  sync_project_configs.py  test_claude.sh  validate_consumers.sh
tests/: __init__.py  test_bandit_wrapper.py  test_ci.py  test_claude_cli.py  test_claude_pty_wrapper.py  test_cli_detection.py  test_codex.py  test_complexity_guard.py  test_config.py  test_constants.py  test_consumers.py  test_coverage.py  test_coverage_guard.py  test_data_guard.py  test_delegation_guard.py  test_dependency_guard.py  test_fragmentation_guard.py  test_function_size_guard.py  test_generate_commit_message.py  test_guard_common.py  test_import_analysis.py  test_inheritance_guard.py  test_list_consumers.py  test_messaging.py  test_method_count_guard.py  test_models.py  test_module_guard.py  test_patch_cycle.py  test_policy_collectors_ast.py  test_policy_collectors_text.py  test_policy_guard.py  test_process.py  test_propagate_ci_shared.py  test_simple_namespace_policy.py  test_structure_guard.py  test_sync_project_configs.py  test_tool_config_guard.py  test_unused_module_guard.py  test_workflow.py  test_xci_wrapper.py
