[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-ci-tools"
version = "0.1.0"
description = "Shared CI automation scripts for Zeus and Kalshi repositories"
authors = [{name = "Codex Automation"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools"
]
# tomli is needed for Python 3.10 (tomllib is built-in for 3.11+)
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "jinja2>=3.1.0",
    "coverage>=7.5.0",
    "radon>=6.0.1",
]

# =============================================================================
# Repository-Specific Tool Configurations
# =============================================================================
# [tool.deptry] is repository-specific (different packages, dependencies, etc)
# =============================================================================

[tool.deptry]
root = ["ci_tools", "scripts"]
exclude = ["tests"]
known_first_party = ["ci_tools"]

[tool.deptry.package_module_name_map]
tomli = "tomli"

[tool.deptry.per_rule_ignores]
DEP002 = ["jinja2"]
DEP003 = [
    "ci_tools/scripts/coverage_guard.py:coverage",
    "scripts/complexity_guard.py:radon",
]

[tool.setuptools]
packages = ["ci_tools"]
include-package-data = true

[tool.setuptools.package-data]
ci_tools = ["scripts/*.sh", "scripts/*.py", "vendor/**/*", "config/*"]

# =============================================================================
# Standardized Tool Configurations
# =============================================================================
# These [tool.*] sections are standardized across all repositories (zeus,
# kalshi, aws, ci_shared) to ensure consistent CI behavior.
#
# Source of truth: shared-tool-config.toml
#
# To validate: python -m ci_tools.scripts.tool_config_guard
# To sync: python -m ci_tools.scripts.tool_config_guard --sync
# =============================================================================

[tool.bandit]
exclude_dirs = [
    "/vendor/",
    "/.venv/",
    "/venv/",
    "/artifacts/",
    "/trash/",
    "/models/",
    "/logs/",
]
skips = [
    "B101",
    "B301",
    "B403",
    "B105",
    "B106",
    "B107",
    "B108",
    "B110",
    "B311",
    "B404",
    "B603",
    "B607",
    "B608",
]

[tool.coverage]

[tool.coverage.report]
omit = [
    "**/__init__.py",
    "*helpers/__init__.py",
    "*/_module_references.py",
]

[tool.coverage.run]
omit = [
    "*/vendor/*",
    "*/__main__.py",
    "**/__init__.py",
    "tests/*",
    "*/tests/*",
    "*_test_*.py",
    "*/dependency_injector/*.pyx",
    "*/dependency_injector/**/*.pyx",
    "*/site-packages/*",
    "*helpers/__init__.py",
    "*/_module_references.py",
]

[tool.pylint]

[tool.pylint.BASIC]
method-rgx = "([a-z_][a-z0-9_]*|visit_[A-Z][A-Za-z]*)"

[tool.pylint.MAIN]
init-hook = "import sys; sys.path.insert(0, 'tests')"

[tool.pylint.SIMILARITIES]
min-similarity-lines = 7

[tool.pylint.design]
max-args = 7
max-positional-arguments = 7

[tool.pylint.messages_control]
disable = "too-few-public-methods"

[tool.pyright]
pythonVersion = "3.12"
reportArgumentType = "warning"
reportAssertAlwaysTrue = "warning"
reportAssignmentType = "warning"
reportAttributeAccessIssue = "warning"
reportCallInDefaultInitializer = "none"
reportCallIssue = "warning"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "warning"
reportGeneralTypeIssues = "error"
reportImplicitStringConcatenation = "none"
reportIncompleteStub = "none"
reportIndexIssue = "warning"
reportInvalidStubStatement = "warning"
reportInvalidTypeVarUse = "warning"
reportMissingImports = "error"
reportMissingModuleSource = "none"
reportMissingTypeStubs = "none"
reportOperatorIssue = "warning"
reportOptionalCall = "warning"
reportOptionalContextManager = "warning"
reportOptionalIterable = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalOperand = "warning"
reportOptionalSubscript = "warning"
reportPrivateUsage = "none"
reportPropertyTypeMismatch = "warning"
reportReturnType = "warning"
reportSelfClsParameterName = "warning"
reportUnboundVariable = "error"
reportUndefinedVariable = "error"
reportUninitializedInstanceVariable = "none"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUntypedBaseClass = "none"
reportUntypedClassDecorator = "none"
reportUntypedFunctionDecorator = "none"
reportUntypedNamedTuple = "warning"
reportUnusedImport = "error"
reportUnusedVariable = "error"
typeCheckingMode = "basic"

[tool.pytest]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--durations=10",
    "--durations-min=0.1",
    "-ra",
    "-p",
    "pytest_asyncio",
    "-p",
    "no:jaxtyping",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
consider_namespace_packages = true
env = [
    "PYTHONDONTWRITEBYTECODE=1",
    "REDIS_HOST=localhost",
    "REDIS_PORT=6379",
    "REDIS_DB=0",
    "REDIS_PASSWORD=",
    "REDIS_SSL=false",
    "REDIS_RETRY_ON_TIMEOUT=false",
    "REDIS_SOCKET_TIMEOUT=30",
    "REDIS_SOCKET_CONNECT_TIMEOUT=30",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:The optimal value found.*is close to the specified.*bound.*:UserWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
    "ignore::UserWarning:sklearn",
    "ignore::FutureWarning:sklearn",
    "ignore::FutureWarning",
]
junit_duration_report = "total"
junit_family = "xunit2"
markers = [
    "unit: Unit tests - fast, isolated tests (< 1 second each)",
    "integration: Integration tests - test component interactions (< 15 seconds each)",
    "e2e: End-to-end tests - full system tests (< 2 minutes each)",
    "slow: Tests that take longer to run (> 1 second)",
    "fast: Fast running tests (< 1 second)",
    "pdf: PDF processing related tests",
    "redis: Tests requiring Redis connection",
    "external: Tests requiring external services",
    "performance: Performance-critical tests with timing requirements",
    "parallel_safe: Tests explicitly verified safe for parallel execution (unused in sequential mode)",
    "sequential_only: Tests that must run sequentially (now default behavior)",
    "cache_population: Tests that populate cache for other tests (run first)",
    "multi_currency: Tests that use both BTC and ETH data",
    "btc_specific: Tests specific to BTC currency",
    "eth_specific: Tests specific to ETH currency",
    "cache_dependent: Tests that benefit from populated cache (run after cache population)",
    "pnl: PnL (Profit and Loss) system related tests",
    "slowpdf: Deterministic PDF performance regression tests",
]
norecursedirs = [
    "tests/manual",
]
python_classes = [
    "Test*",
]
python_files = [
    "test_*.py",
]
python_functions = [
    "test_*",
]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
timeout = 30
timeout_method = "thread"

[tool.ruff]
extend-exclude = [
    "ci_tools/vendor",
]

[tool.ruff.lint]
ignore = [
    "TRY003",
]
select = [
    "TRY",
    "C90",
    "PLR",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "TRY002",
    "TRY203",
    "PLR2004",
]

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 10
max-statements = 50
